Modificacion de las operaciones js

--- a/JS_Galeria/index.html
+++ b/JS_Galeria/index.html
@@ -51,7 +51,7 @@
 			
 			<div class="boton">
 				<a href="#">
-					<img src="imagenes/pause.png" id="btn" onclick="playpause();" />
+					<img src="images/pause.png" id="btn" onclick="playpause();" />
 				</a>
 			</div>
 		</div>
