--- a/JS_Validaciones/index.html
+++ b/JS_Validaciones/index.html
@@ -1,15 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title> Validaciones</title>
+    <script type="text/javascript" src="js/operaciones.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
+
 <body>
-    <h1>
-        Hola 
-    </h1>
-    
+    <header id="cabecera">
+        <a id="logo">
+            <span> Validaciones </span> <br>
+            <span>Llenar el formulario </span>
+        </a>
+    </header>
+
+    <form id="formulario01" method="Post" action="JS_Validaciones/index.html"
+        onsubmit="return validarCamposObligatorios()">
+
+        <label for="cedula">Cedula: </label>
+        <input type="text" id="cedula" name="cedula" value="" placeholder="Ingrese su cedula"
+            onkeyup=" validarCedula(this)">
+        <span id="mensajeCedula"></span>
+
+        <br>
+
+        <label for="nombres">Nombres: </label>
+        <input type="text" id="nombres" name="nombres" value="" placeholder="Ingrese sus dos nombres"
+            onkeyup="validarLetras(this)">
+
+        <br>
+
+        <label for="apellidos">Apellidos: </label>
+        <input type="text" id="apellidos" name="apellidos" value="" placeholder="Ingrese sus apellidos"
+            onkeyup="validarNumeros(this)">
+
+        <br>
+
+        <label for="direccion">Dirección: </label>
+        <input type="text" id="direccion" name="direccion" value="" placeholder="Ingrese su dirección">
+
+        <br>
+
+        <label for="telefono">Teléfono: </label>
+        <input type="text" id="telefono" name="telefono" value="" placeholder="Ingrese su número de teléfono"
+            onkeyup="validarTelefono(this)" onkeyup="validarNumeros(this)">
+
+        <br>
+
+        <label for="fechaNacimiento">Fecha de Nacimiento: </label>
+        <input type="text" id="fechaNacimiento" name="fechaNacimiento" value="" placeholder="Ingrese la fecha"
+            onkeyup="validarFecha(this)">
+
+        <br>
+
+        <label for="correo">Correo: </label>
+        <input type="text" id="correo" name="correo" value="" placeholder="Ingrese su correo electrónico"
+            onkeyup="validarCorreo(this)">
+
+        <br>
+
+        <label for="contrasena">Contraseña: </label>
+        <input type="password" id="contrasena" name="contrasena" value="" placeholder="Ingrese su contraseña">
+
+        <br>
+
+        <input type="submit" id="crear" name="crear" value="Aceptar">
+        <input type="reset" id="cancelar" name="cancelar" value="Cancelar">
+    </form>
 </body>
+
 </html>
