--- a/JS_Galeria/index.html
+++ b/JS_Galeria/index.html
@@ -1,57 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-	<meta charset="utf-8">
-	<title>Galeria</title>	
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script type="text/javascript" src="js/operaciones.js"></script>
+    <title>Galería</title>
+    <meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="../JS_Galeria/css/styles.css">
+	<script type="text/javascript" src="../JS_Galeria/js/operaciones.js"></script>
 </head>
 
 <body >
-	<div class="contenedor">
-		<div class="imagen actual">
-			<img id="0" class="mySlides" src="images/Asia.jpg" />
-			<div class="texto">Asia</div>
-		</div>
+    <section>
 
-		<div class="imagen">
-			<img id="1" class="mySlides" src="images/Brasil.jpg" />
-			<div class="texto">Brasil</div>
-		</div>
-
-		<div class="imagen">
-			<img id="2" class="mySlides" src="images/Cuenca.jpg ">
-			<div class="texto">Cuenca</div>
-		</div>
-
-		<div class="imagen">
-			<img id="3" class="mySlides" src="images/Dubai.jpg" />
-			<div class="texto">Dubai</div>
-		</div>
-		<div class="imagen">
-			<img id="4" class="mySlides" src="images/Estados_Unidos.png" />
-			<div class="texto">Estados_Unidos</div>
-		</div>
-
-		<a id="left" href="#" class="anterior" onclick="anterior();">&#10094;</a>
-		<a id="right" href="#" class="siguiente" onclick="siguiente();">&#10095;</a>
+        <div id="img">
+            <h1 style="color: rgb(5, 49, 107)"> Galeria Javier Yunga</h1>
+            <img id="0" class="mySlides" src="">
+            <img id="1" class="mySlides" src="">
+            <img id="2" class="mySlides" src="">
+            <img id="3" class="mySlides" src="">
+            <img id="4" class="mySlides" src="">
+        </div>
+        <button id="left" class="button black left" onclick="plusDivs(-1)">&#10094;</button>
         <button id="center" class="button black center" onclick="iniciar()">INICIAR</button>
+        <button id="right" class="button black right" onclick="plusDivs(+1)">&#10095;</button>
     
-		<div class="puntos">
-			<span class="punto activo" onclick="mostrar(0);"></span>
-			<span class="punto" onclick="mostrar(1);"></span>
-			<span class="punto" onclick="mostrar(2);"></span>
-			<span class="punto" onclick="mostrar(3);"></span>
-			<span class="punto" onclick="mostrar(4);"></span>
-		</div>
-
-		<div class="boton">
-			<a href="#">
-				<img src="images/pause.png" id="btn" onclick="playpause();" />
-			</a>
-		</div>
-	</div>
+    </section>
 </body>
+
 
 </html>
