--- a/JS_Validaciones/index.html
+++ b/JS_Validaciones/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>PHP</title>
-	<script type="text/javascript" src="../JS_Validaciones/js/operaciones.js"></script>
+	<script type="text/javascript" src="../JS_Validaciones/operaciones.js"></script>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-	<link rel="stylesheet" type="text/css" href="../JS_Validaciones/css/styles.css">
+	
+	<link rel="stylesheet" type="text/css" href="../JS_Validaciones/styles.css">
 </head>
 <body>
 
@@ -16,18 +17,21 @@
 				<table>
 					<tr>
 						<td><label>Cedula</label></td>
-						<td><input type="text" id="ced" name="ced" placeholder="ingresar la cédula" onfocus="escribe(this)" onkeyup="this.value = val_numero(this.value)"></td>
+						<td><input type="text" id="ced" name="ced" placeholder="ingresar la cédula" onfocus="escribe(this)" 
+							onkeyup="this.value = val_numero(this.value)"></td>
 						<td><spam id="c" style="display: none;">*error</spam></td>
 					</tr>
 
 					<tr>
 						<td><label>Nombre</label></td>
-						<td><input type="text" name="nom" placeholder="ingresar el nombre" onfocus="escribe(this)" onkeyup="this.value = val_letra(this.value)" onchange="this.value = dos_valores(this.value)"></td>
+						<td><input type="text" name="nom" placeholder="ingresar el nombre" onfocus="escribe(this)" 
+							onkeyup="this.value = val_letra(this.value)" onchange="this.value = dos_valores(this.value)"></td>
 					</tr>
 
 					<tr>
 						<td><label>Apellido</label></td>
-						<td><input type="text" name="ape" placeholder="ingresar el apellido" onfocus="escribe(this)" onkeyup="this.value = val_letra(this.value)" onchange="this.value = dos_valores(this.value)"></td>
+						<td><input type="text" name="ape" placeholder="ingresar el apellido" onfocus="escribe(this)" 
+							onkeyup="this.value = val_letra(this.value)" onchange="this.value = dos_valores(this.value)"></td>
 					</tr>
 
 					<tr>
@@ -37,7 +41,8 @@
 
 					<tr>
 						<td><label>Teléfono</label></td>
-						<td><input type="text" name="tel" placeholder="ingresar el número telefónico" onfocus="escribe(this)" onkeyup="this.value = val_numero(this.value)"></td>
+						<td><input type="text" name="tel" placeholder="ingresar el número telefónico" onfocus="escribe(this)" 
+							onkeyup="this.value = val_numero(this.value)"></td>
 					</tr>
 
 					<tr>
