Ultima modificacion en la galeria

--- a/JS_Galeria/index.html
+++ b/JS_Galeria/index.html
@@ -6,6 +6,7 @@
         <link type="text/css" href="../JS_Galeria/styles.css" rel="stylesheet">
     </head>
     <body onload="init()">
+        <h1>Galeria Hipermedial</h1>
         <form>
             <img id="img">
             <input type="button" id="anterior" name="anterior" value="Anterior" onclick="atras()">
